# web-quickstart

./: Cargo.toml  README.md  Rocket.toml
migrations/2018-10-29-165323_create_users/: up.sql
src/: db.rs  main.rs
src/models/: user.rs
src/views/: mod.rs  static_page.rs  user.rs
templates/: base.html.hbs
templates/static_page/: base.html.hbs  demo-1.html.hbs  index.html.hbs
templates/user/: create.html.hbs  detail.html.hbs
