[package]
name = "web-quickstart"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]
edition = "2018"
publish = false

[dependencies]
error-chain = "0.12.0"

diesel = { version = "1.0.0", features = ["sqlite", "r2d2"] }

rocket = "0.3.17"
rocket_codegen = "0.3.17"

serde = "1.0.80"
serde_derive = "1.0.80"

typed-builder = "0.1.1"
