[package]
name = "web-quickstart"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]
edition = "2018"
publish = false

[dependencies]
error-chain = "0.12.0"

diesel = { version = "1.0.0", features = ["sqlite", "r2d2"] }

serde = "1.0.80"
serde_derive = "1.0.80"

typed-builder = "0.1.1"

[dependencies.rocket_codegen]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.4.0-dev"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.4.0-dev"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.4.0-dev"
default-features = false
features = ["handlebars_templates", "serve", "diesel_sqlite_pool"]
